--- a/css/NetFilm.css
+++ b/css/NetFilm.css
@@ -39,9 +39,10 @@ nav a {
 .sidebar {
   background-color: #4f8794;
   width: 300px;
-  font-size: 15px;
+  font-size: 20px;
   padding-top: 20px;
   padding-left: 20px;
+  font-weight: 600;
 }
 .sidebar_1{
   margin-bottom: 100px;
@@ -70,13 +71,13 @@ iframe {
 .movie-thumbs {
   display: flex;
   justify-content: center;
-  gap: 50px;
+  gap: 20px;
   margin-top: 50px;
 }
 .movie-thumbs_des{
   background-color: #4f8794;
   border-radius: 10px;
-  font-size: 20px;
+  font-size: 30px;
   text-align: center;
   color: #ccc;
   font-weight: 700;
